--- a/index.html
+++ b/index.html
@@ -66,24 +66,30 @@
         </div>
         <div class="seventh">
             <div class="go_sleep">
-                <p class="sleep1"> засыпай засыпай засыпай засыпай</p>
-                <p class="sleep2"> засыпай засыпай засыпай засыпай</p>
-                <p class="sleep3"> засыпай засыпай засыпай засыпай</p>
-                <p class="sleep4"> засыпай засыпай засыпай засыпай</p>
-                <p class="sleep5"> засыпай засыпай засыпай засыпай</p>
-                <p class="sleep6"> засыпай засыпай засыпай засыпай</p>
-                <p class="sleep7"> засыпай засыпай засыпай засыпай</p>
-                <p class="sleep8"> засыпай засыпай засыпай засыпай</p>
-                <p class="sleep9"> засыпай засыпай засыпай засыпай</p>
-                <p class="sleep10"> засыпай засыпай засыпай засыпай</p>
+                <p> засыпай засыпай засыпай засыпай</p>
+                <p> засыпай засыпай засыпай засыпай</p>
+                <p> засыпай засыпай засыпай засыпай</p>
+                <p> засыпай засыпай засыпай засыпай</p>
+                <p> засыпай засыпай засыпай засыпай</p>
+                <p> засыпай засыпай засыпай засыпай</p>
+                <p> засыпай засыпай засыпай засыпай</p>
+                <p> засыпай засыпай засыпай засыпай</p>
+                <p> засыпай засыпай засыпай засыпай</p>
+                <p> засыпай засыпай засыпай засыпай</p>
             </div>
-            <p>7</p>
+            <p class="seven">7</p>
         </div>
         <div class="eighth">
-            <p>возвращение в реальность возвращение в реальность</p>
-            <p>возвращение в реальность возвращение в реальность</p>
             <img src="./img/cross.svg" alt="">
-            <p>8</p>        
+            <div class="back_to_reality1">
+                <p>возвращение в реальность возвращение в реальность</p>
+                <p>возвращение в реальность возвращение в реальность</p>
+            </div>
+            <div class="back_to_reality2">
+                <p>возвращение в реальность возвращение в реальность</p>
+                <p>возвращение в реальность возвращение в реальность</p>
+            </div>
+            <p class="eight">8</p>        
         </div>
         <div class="ninth">
             <p>9</p>
@@ -91,7 +97,7 @@
         <div class="tenth">
             <p>10</p>
         </div>
-        <div class="elevent">
+        <div class="eleventh">
             <div class="errors">
                 <p>ошибка</p>
                 <p>ошибка</p>
@@ -102,8 +108,12 @@
                 <p>ошибка</p>
                 <p>ошибка</p>
                 <p>ошибка</p>
+                <p>ошибка</p>
+                <p>ошибка</p>
+                <p>ошибка</p>
+                <p>ошибка</p>
             </div>
-            <p>11</p>
+            <p class="eleven">11</p>
         </div>
         <div class="twelfth">
             <div class="tunnels">
@@ -134,11 +144,14 @@
             <p>14</p>
         </div>
         <div class="fifteenth">
-            <p class="spi"> s.p.i!</p>
+            <img src="./img/spi_white.svg" alt="">
             <p>15</p>
         </div>
     </div>
-    <div class="dream">сон сон сон сон сон сон сон сон</div>
+    <div class="dream">
+        <p>сон сон сон сон сон сон сон сон</p>
+        <p>сон сон сон сон сон сон сон сон</p>
+    </div>
     <div class="dash_arrow">
         <img src="./img/arrow_dash/1.svg" alt="">
         <img src="./img/arrow_dash/2.svg" alt="">
